--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Strona dunduna
 
      <div id="b" class="r">
          Kahoot mój
-         <link>https://play.kahoot.it/v2/?quizId=b2fb5e39-683b-47b3-ac97-393cee971969</link>
+         <a href="https://play.kahoot.it/v2/?quizId=b2fb5e39-683b-47b3-ac97-393cee971969">Kliknij mnie</a>
         
     </div>
 
