--- a/scary/index.html
+++ b/scary/index.html
@@ -28,12 +28,24 @@ body {
     font-size: 150px;
     color: darkred;
 }
+
+#home {
+flex: auto;
+
+
+
+
+
+
+}
 </style>
 <link rel="shortcut icon" type="image/jpg" href="forest.jpg"/>
 </head>
 <body>
 
 <div id="p1"> <div id="text">Uwaga jumpscare</div> </div>
+
+
 
 <script>
     function dd(){
@@ -43,7 +55,11 @@ audio.play();
 document.getElementById("bu").innerHTML = "AAAAAAAAAAAAA";
     }
 </script>
+
+
 <button class="b" id="bu" onclick="dd()">Uruchom</button>
+
+<button class="b" id="home">Z powrotem</button>
 
 </body>
 </html>
