--- a/scary/index.html
+++ b/scary/index.html
@@ -54,12 +54,13 @@ var audio = new Audio('kot.mp3');
 audio.play();
 document.getElementById("bu").innerHTML = "AAAAAAAAAAAAA";
     }
+
+    
 </script>
 
 
 <button class="b" id="bu" onclick="dd()">Uruchom</button>
-
-<button class="b" id="home">Z powrotem</button>
+<input type="button" class="b" id="home" onclick="location.href='https://michaumiau.github.io/dd/';" value="Z powrotem" />
 
 </body>
 </html>
