--- a/scary/index.html
+++ b/scary/index.html
@@ -27,7 +27,15 @@ body {
     font-family: 'MyWebFont', Fallback, sans-serif;
     font-size: 150px;
     color: darkred;
+    animation-name: example;
+  animation-duration: 1s;
+
 }
+@keyframes example {
+  from {font-size: 15px;}
+  to {font-size: 150px;}
+}
+
 
 #home {
 margin-left: auto;
