--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ Strona dunduna
     </div>
 
      <div id="b" class="r">
-         Kahoot mój
-         <a href="https://play.kahoot.it/v2/?quizId=b2fb5e39-683b-47b3-ac97-393cee971969">Kliknij mnie</a>
+         nuwa strunka
+         <a href="https://michaumiau.github.io/dd/number/">Kliknij mnie</a>
         
     </div>
 
