--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ Strona dunduna
 
      <div id="b" class="r">
          nuwa strunka
-         <a href="https://michaumiau.github.io/dd/number/">Kliknij mnie</a>
+         <a href="https://michaumiau.github.io/dd/number/">Kliknij mnie po gnerator liczb
+         </a>
         
     </div>
 
