--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>chleb</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="icon" type="image/x-icon" href="favicon.jpg">
     <script src='main.js'></script>
 </head>
 <body>
@@ -30,10 +31,13 @@ Strona dunduna
     </div>
 
      <div id="b" class="r">
-         nuwa strunka
+         <span>
+
+         <h1>Generator liczb</h1>
+         Generator liczb od 1 do 10 z dzwiękami
          <a href="https://michaumiau.github.io/dd/number/">Kliknij mnie po gnerator liczb
          </a>
-        
+        </span>
     </div>
 
     
