--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@ Strona Michała
 
     <div id="a" class="r">
         <h1>DD jumpscare</h1>
-        zrobiłem dundun jumpscare
-        dla zabawy i ekperymentowania
-        w javascript
+        To jest pierwszy działajączy eksperyment który ja zrobiłem używając js i css'a.Planuję zrobić wersję 2 gdzie można własny obraz przesłać
         
         <a href="https://michaumiau.github.io/dd/scary/">kliknij tutaj by prejść do strony</a>
     </div>
@@ -34,7 +32,7 @@ Strona Michała
          <span>
 
          <h1>Generator liczb</h1>
-         Generator liczb od 1 do 10 z dzwiękami
+         Generator liczb od 1 do 10 z dzwiękami.
          <a href="https://michaumiau.github.io/dd/number/">Kliknij mnie po gnerator liczb
          </a>
         </span>
