--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Strona Michała
         <h1>DD jumpscare</h1>
         To jest pierwszy działajączy eksperyment który ja zrobiłem używając js i css'a.Planuję zrobić wersję 2 gdzie można własny obraz przesłać
         
-        <a href="https://michaumiau.github.io/dd/scary/">kliknij tutaj by prejść do strony</a>
+        <a href="https://michaumiau.github.io/dd/scary/">Link tu</a>
     </div>
 
      <div id="b" class="r">
