--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Strona Michała
          <span>
 
          <h1>Generator liczb</h1>
-         Generator liczb od 1 do 10 z dzwiękami.
+         Generator liczb od 1 do 10 z dzwiękami. Też używa js do dzięku i liczb i css'a do wyglądu.
          <a href="https://michaumiau.github.io/dd/number/">Kliknij mnie po gnerator liczb
          </a>
         </span>
