--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>chleb</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="icon" type="image/x-icon" href="favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <script src='main.js'></script>
 </head>
 <body>
