--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@ Strona Michała
 
          <h1>Generator liczb</h1>
          Generator liczb od 1 do 10 z dzwiękami. Też używa js do dzięku i liczb i css'a do wyglądu.
-         <a href="https://michaumiau.github.io/dd/number/">Kliknij mnie po gnerator liczb
+         <a href="https://michaumiau.github.io/dd/number/">Kliknij mnie po generator liczb
          </a>
         </span>
     </div>
 
-    <div> 
+    <div id="c" class="r"> 
         <h1>Kącik Klasy 5</h1>
 
 
         Linki tutaj mogą być
-        
+        <a href="https://michaumiau.github.io/dd/rainbow/">Tęcza z tekstem(dobre na imprezy)
+            </a>
+
 
 
     </div>
