--- a/nyancat/index.html
+++ b/nyancat/index.html
@@ -3,15 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">	<title>NYAN CET </title>
+
+  <link rel="shortcut icon" href=link type="image/x-icon">
+  <link rel="icon" href=link type="image/x-icon">	<title>NYAN CET </title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>	
-<!-- 		<audio src="nyancat.mp3" autoplay="autoplay" loop="loop"></audio>
- -->		<canvas width="" height="" class="canvas"></canvas>
+    <audio src="nyancat.mp3" autoplay="autoplay" loop="loop"></audio>
+		<canvas width="" height="" id="canvas" class="canvas"></canvas>
     <div class="mobile">Desktop Experience</div>
 		<script src="script/canvas.polyfill.js" type="text/javascript"></script>	
 		<script src="script/main.js" type="text/javascript"></script>
+    <script src="script/main.js" type="text/javascript"></script>
 </body>
 </html>
