--- a/nyancat/index.html
+++ b/nyancat/index.html
@@ -14,6 +14,6 @@
     <div class="mobile">Desktop Experience</div>
 		<script src="script/canvas.polyfill.js" type="text/javascript"></script>	
 		<script src="script/main.js" type="text/javascript"></script>
-    <script src="script/main.js" type="text/javascript"></script>
+    <script src="script/favicon.js" type="text/javascript"></script>
 </body>
 </html>
