--- a/nyancat/index.html
+++ b/nyancat/index.html
@@ -3,17 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
-
-
-  <link rel="icon" href=link type="image/x-icon">	<title>NYAN CET </title>
+	<title>NYAN Cat</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>	
-    <audio src="nyancat.mp3" autoplay="autoplay" loop="loop"></audio>
+  <input type="checkbox" id="play">
 		<canvas width="" height="" id="canvas" class="canvas"></canvas>
     <div class="mobile">Desktop Experience</div>
 		<script src="script/canvas.polyfill.js" type="text/javascript"></script>	
 		<script src="script/main.js" type="text/javascript"></script>
-    <script src="script/favicon.js" type="text/javascript"></script>
+    <script src="script/audio.js" type="text/javascript"></script>
 </body>
 </html>
