--- a/nyancat/index.html
+++ b/nyancat/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>	
   <input type="checkbox" id="play">
+
+  <audio loop autoplay>
+    <source src="nyancat.mp3" type="audio/filetype">
+</audio>
+
 		<canvas width="" height="" id="canvas" class="canvas"></canvas>
     <div class="mobile">Desktop Experience</div>
 		<script src="script/canvas.polyfill.js" type="text/javascript"></script>	
