moze tarz będzie działać

--- a/nyancat/index.html
+++ b/nyancat/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>	
-  <input type="checkbox" id="play">
+ <button onclick="audio.play();"></button>
 
   <audio loop autoplay>
     <source src="nyancat.mp3" type="audio/filetype">
@@ -17,6 +17,6 @@
     <div class="mobile">Desktop Experience</div>
 		<script src="script/canvas.polyfill.js" type="text/javascript"></script>	
 		<script src="script/main.js" type="text/javascript"></script>
-    <script src="script/audio.js" type="text/javascript"></script>
+    
 </body>
 </html>
