--- a/nyancat/index.html
+++ b/nyancat/index.html
@@ -7,11 +7,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>	
- <button onclick="audio.play();"></button>
+ <button onclick="audio.pause();"></button>
 
-  <audio loop autoplay>
-    <source src="nyancat.mp3" type="audio/filetype">
-</audio>
+<audio autoplay loop src="nyancat.mp3"></audio> 
 
 		<canvas width="" height="" id="canvas" class="canvas"></canvas>
     <div class="mobile">Desktop Experience</div>
