testing new banners

--- a/en/index.html
+++ b/en/index.html
@@ -13,7 +13,7 @@
     <div id="ramkag" class="r">
  
  
-Michael's Site
+Michał's Website
 
 
 
@@ -22,7 +22,7 @@ Michael's Site
                    
 
     <div id="a" class="r">
-        <h1>sceri Jumpscare</h1>
+        <h1>(Not)Scary Jumpscare</h1>
         This is my first experiment i made using JS and CSS. i plan on making a second version where you can upload your own image
         <a href="https://michaumiau.github.io/dd/scary/">Link tu</a>
     </div>
