--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ Strona Michała
 
     </div>
     
-
+<div id="e" class="r">
     If you wanna see this page in english click <a href="https://michaumiau.github.io/dd/en">here</a>
-
+</div>
 
 
 
