--- a/en/index.html
+++ b/en/index.html
@@ -61,9 +61,10 @@ Michał's Website
     </div>
     
 
-    Jeśli chcesz zobaczyć tą stronę po polsku kliknij <a href="https://michaumiau.github.io/dd/">tu</a>
 
-
+    <div id="e" class="r">
+        Jeśli chcesz zobaczyć tą stronę po polsku kliknij <a href="https://michaumiau.github.io/dd/">tu</a>
+    </div>
 
 
 
