--- a/en/index.html
+++ b/en/index.html
@@ -19,6 +19,10 @@ Michał's Website
 
 
     </div>
+
+    <div id="e" class="r">
+       Disclaimer: my english isnot good i cnat bralely speek poland
+    </div>
                    
 
     <div id="a" class="r">
