--- a/scary/index.html
+++ b/scary/index.html
@@ -69,6 +69,8 @@ document.getElementById("bu").innerHTML = "AAAAAAAAAAAAA";
 
 <button class="b" id="bu" onclick="dd()">Uruchom</button>
 <input type="button" class="b" id="home" onclick="location.href='https://michaumiau.github.io/dd/';" value="Z powrotem" />
+<input type="url" class="b" id="inputurl">
+
 
 </body>
 </html>
