--- a/scary/index.html
+++ b/scary/index.html
@@ -76,8 +76,8 @@ alert(input);
 <button class="b" id="bu" onclick="dd()">Uruchom</button>
 <input type="button" class="b" id="home" onclick="location.href='https://michaumiau.github.io/dd/';" value="Z powrotem" />
 <form id="form" onsubmit="return false;">
-  <input style="position:absolute; top:80%; left:5%; width:40%;" type="text" id="userInput" />
-  <input style="position:absolute; top:50%; left:5%; width:40%;" type="submit" onclick="urlinput();" />
+  <input type="text" id="userInput" />
+  <input type="submit" onclick="urlinput();" />
 </form>
 
 
